--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Vivid - Creative Personal Portfolio Template</title>
+	<title>Timur Zhiigmytov - Full-Stack Developer</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Vivid creative personal portfolio template">
-	<meta name="keywords" content="vivid, creative, personal, portfolio, template">
+	<meta name="description" content="Timur Zhiigmytov - Full-Stack Developer">
+	<meta name="keywords" content="Timur Zhiigmytov - Full-Stack Developer">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/favicon.ico" rel="shortcut icon"/>
