Change description text

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 				</div>
 				<div class="col-lg-6 about-text">
 					<h1 class="hero-title">A short story about me,<br>developing and create.</h1>
-					<p>I am <span>Timur Zhigmytov</span>. Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Voice hours young woody.</p>
+					<p>I am <span>Timur Zhigmytov</span>. I am a Full-stack developer with 2 years of experience who has worked with a huge amount of modern web technologies in an international distributed software development team. In my university years, I actively participated in republican student olympiads, practiced as an assistant teacher and
+						participated in the development of university projects. As an employee, I participated in supporting a large enterprise project, creating projects from scratch, communicating with clients and mentoring new employees. My main goal is to create high-quality products in an excellent team!</p>
 					<img src="img/sign.png" alt="">
 				</div>
 			</div>
