--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="Timur Zhiigmytov - Full-Stack Developer">
 	<meta name="keywords" content="Timur Zhiigmytov - Full-Stack Developer">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<!-- Favicon -->   
 	<link href="img/favicon.ico" rel="shortcut icon"/>
 
@@ -70,7 +70,7 @@
 			<div class="intro-inner">
 				<div class="container">
 					<h2>Hey! I'm <span>Timur</span></h2>
-					<h3>A Full-stack Developer.</h3>
+					<h3>A Full-stack Developer</h3>
 				</div>
 			</div>
 		</div>
@@ -86,7 +86,7 @@
 					<img class="me" src="img/me.jpg" alt="">
 				</div>
 				<div class="col-lg-6 about-text">
-					<h1 class="hero-title">A short story about me,<br>developing and create.</h1>
+					<h1 class="hero-title">A short story about me,<br>developing and create</h1>
 					<p>I am <span>Timur Zhigmytov</span>. I am a Full-stack developer with 2 years of experience who has worked with a huge amount of modern web technologies in an international distributed software development team. In my university years, I actively participated in republican student olympiads, practiced as an assistant teacher and
 						participated in the development of university projects. As an employee, I participated in supporting a large enterprise project, creating projects from scratch, communicating with clients and mentoring new employees. My main goal is to create high-quality products in an excellent team!</p>
 					<img src="img/sign.png" alt="">
@@ -101,7 +101,7 @@
 	<section class="resume-section spad" id="resume">
 		<div class="container">
 			<div class="section-title">
-				<h2>My Experience</h2>
+				<h2>Working Experience</h2>
 			</div>
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2">
@@ -155,11 +155,8 @@
 	<section class="portfolio-section spad" id="works">
 		<div class="container">
 			<div class="section-title">
-				<h2>My Projects</h2>
+				<h2>Projects</h2>
 			</div>
-			<ul class="portfolio-filter">
-				<li class="filter active" data-filter="*">All Works</li>
-			</ul>
 			<div class="row isotope_items">
 				<!-- portfolio item -->
 				<div class="col-lg-4 col-md-6 photo">
