Fix styles bugs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<title>Timur Zhiigmytov - Full-Stack Developer</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Timur Zhiigmytov - Full-Stack Developer">
-	<meta name="keywords" content="Timur Zhiigmytov - Full-Stack Developer">
+	<meta name="description" content="Timur Zhigmytov - Full-Stack Developer">
+	<meta name="keywords" content="Timur Zhigmytov - Full-Stack Developer">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- Favicon -->   
 	<link href="img/favicon.ico" rel="shortcut icon"/>
@@ -112,7 +112,10 @@
 							<h2>Full-Stack Developer (Remote)</h2>
 							<h3>1 year 2019-2020</h3>
 						</div>
+						<a href="https://secondcompany.nl/">
 							<img class="sc-img" src="img/sc.svg" alt="">
+							<img class="sc-img-short" src="img/sc-short.svg" alt="">
+						</a>
 						</div>
 						<div>
               <ul>
@@ -132,7 +135,9 @@
 							<h2>Frontend Developer</h2>
 							<h3>1 year 2018-2019</h3>
 						</div>
-							<img src="img/innoforce.svg" alt="">
+						<a href="https://innoforce.kz/">
+							<img class="innoforce-logo" src="img/innoforce.svg" alt="">
+						</a>
 						</div>
 						<div>
 							<ul>
@@ -249,7 +254,7 @@
 				<div class="col-lg-8 offset-lg-2">
 					<div class="con-info wow fadeInUp" data-wow-delay="0.2s">
 						<p class="subtitle">Almaty</p>
-						<h2>53a Gabdullin Street,<br>Kazakhstan. <br><br>+7 708 007 0079<br>zhygmytov@gmail.com</h2>
+						<h2>53a Gabdullin Street,<br>Kazakhstan <br><br>+7 708 007 0079<br>zhygmytov@gmail.com</h2>
 					</div>
 					<!-- contact form -->
 					<div id="map"></div>
