Add new tab links for companies

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<h2>Full-Stack Developer (Remote)</h2>
 							<h3>1 year 2019-2020</h3>
 						</div>
-						<a href="https://secondcompany.nl/">
+						<a href="https://secondcompany.nl/" target="_blank">
 							<img class="sc-img" src="img/sc.svg" alt="">
 							<img class="sc-img-short" src="img/sc-short.svg" alt="">
 						</a>
@@ -135,7 +135,7 @@
 							<h2>Frontend Developer</h2>
 							<h3>1 year 2018-2019</h3>
 						</div>
-						<a href="https://innoforce.kz/">
+						<a href="https://innoforce.kz/" target="_blank">
 							<img class="innoforce-logo" src="img/innoforce.svg" alt="">
 						</a>
 						</div>
