--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Timur Zhiigmytov - Full-Stack Developer</title>
+	<title>Timur Zhigmytov - Full-Stack Developer</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Timur Zhigmytov - Full-Stack Developer">
 	<meta name="keywords" content="Timur Zhigmytov - Full-Stack Developer">
