--- a/index.html
+++ b/index.html
@@ -1,313 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Timur Zhigmytov - Full-Stack Developer</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Timur Zhigmytov - Full-Stack Developer">
-	<meta name="keywords" content="Timur Zhigmytov - Full-Stack Developer">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
-
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/themify-icons.css"/>
-	<link rel="stylesheet" href="css/animate.min.css"/>
-	<link rel="stylesheet" href="css/magnific-popup.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/nes.css@latest/css/nes.min.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-	<!-- Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
-
-	
-	<!-- Navigation section start -->
-	<div id="navigation-toggle" class="nav-toggle">
-		<span></span>
-		<span></span>
-		<span></span>
-	</div>
-	<div class="nav-section">
-		<div class="close-nav">+</div>
-		<!-- Main menu -->
-		<nav class="main-manu">
-			<ul class="menu-list">
-				<li><a href="#home">Home</a></li>
-				<li><a href="#about">About</a></li>
-				<li><a href="#resume">Resume</a></li>
-				<li><a href="#works">Works</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
-		<div class="social-links">
-			<a href="https://twitter.com/jyggiz_" target="_blank"><i class="fa fa-twitter"></i></a>
-			<a href="https://github.com/jyggiz" target="_blank"><i class="fa fa-github"></i></a>
-			<a href="https://www.linkedin.com/in/timur-zhigmytov/" target="_blank"><i class="fa fa-linkedin"></i></a>
-		</div>
-	</div>
-	<!-- Navigation section end -->
-
-
-	<!-- Intro section start -->
-	<section class="intro-section" id="home">
-		<div id="particles"></div>
-		<div class="intro-content">
-			<div class="intro-inner">
-				<div class="container">
-					<h2>Hey! I'm <span>Timur</span></h2>
-					<h3>A Full-stack Developer</h3>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Intro section start end -->
-
-
-	<!-- About section start -->
-	<section class="about-section spad" id="about">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 mb-5 mb-lg-0">
-					<img class="me" src="img/me.jpg" alt="">
-				</div>
-				<div class="col-lg-6 about-text">
-					<h1 class="hero-title">A short story about me,<br>developing and create</h1>
-					<p>I am <span>Timur Zhigmytov</span>. I am a Full-stack developer with 2 years of experience who has worked with a huge amount of modern web technologies in an international distributed software development team. In my university years, I actively participated in republican student olympiads, practiced as an assistant teacher and
-						participated in the development of university projects. As an employee, I participated in supporting a large enterprise project, creating projects from scratch, communicating with clients and mentoring new employees. My main goal is to create high-quality products in an excellent team!</p>
-					<img src="img/sign.png" alt="">
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- About section start end -->
-
-
-	<!-- Resume section start -->
-	<section class="resume-section spad" id="resume">
-		<div class="container">
-			<div class="section-title">
-				<h2>Working Experience</h2>
-			</div>
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2">
-					<!-- resume item -->
-					<div class="resume-item wow fadeInUp" data-wow-delay="0.3s">
-						<div class="resume-item-cont">
-							<div class="resume-item-info">
-							<h2>Full-Stack Developer (Remote)</h2>
-							<h3>1 year 2019-2020</h3>
-						</div>
-						<a href="https://secondcompany.nl/" target="_blank">
-							<img class="sc-img" src="img/sc.svg" alt="">
-							<img class="sc-img-short" src="img/sc-short.svg" alt="">
-						</a>
-						</div>
-						<div>
-              <ul>
-                <li>Built modern web-applications with React, Redux, NodeJS, Express, GraphQL, Apollo, Typescript</li>
-                <li>Develop, upgrade, and maintain advanced software in the roofing sector, social and job marketing industry</li>
-                <li>Wrote extensible and maintainable code as part of a team</li>
-                <li>Consulted with clients regularly regarding projects, proposals, and technical issues that arise during the development process</li>
-                <li>Prepared reports on specifications and activities for controlled project</li>
-                <li>Experimented with technologies like PWA (Progressive web application) and SSR (Server-side rendering).</li>
-              </ul>
-            </div>
-					</div>
-					<!-- resume item -->
-					<div class="resume-item wow fadeInUp" data-wow-delay="0.3s">
-						<div class="resume-item-cont">
-							<div class="resume-item-info">
-							<h2>Frontend Developer</h2>
-							<h3>1 year 2018-2019</h3>
-						</div>
-						<a href="https://innoforce.kz/" target="_blank">
-							<img class="innoforce-logo" src="img/innoforce.svg" alt="">
-						</a>
-						</div>
-						<div>
-							<ul>
-								<li>Modified existing software to detect and correct errors, improve performance, and upgrade interfaces</li>
-								<li>Built modern applications with AngularJS</li>
-								<li>Collaborated well with other team members to determine the best design specifications and details</li>
-								<li>Developed frontend part of online transport management system for busdepot 'SmartQala'</li>
-								<li>Created authorization system for internal portal with Firebase.</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Resume section start end -->
-
-
-	<!-- Portfolio section start -->
-	<section class="portfolio-section spad" id="works">
-		<div class="container">
-			<div class="section-title">
-				<h2>Projects</h2>
-			</div>
-			<div class="row isotope_items">
-				<!-- portfolio item -->
-				<div class="col-lg-4 col-md-6 photo">
-					<a href="https://www.secondcompany.nl/en/cases/msq-group/" target="_blank" class="portfolio-item set-bg" data-setbg="img/msq.svg">
-						<div class="portfolio-text">
-							<h2>Dakota2</h2>
-							<p>Roofing sector</p>
-						</div>
-					</a>
-				</div>
-				<!-- portfolio item -->
-				<div class="col-lg-8 col-md-6 brand">
-					<a href="https://www.insightsbenelux.com/" target="_blank" class="portfolio-item set-bg" data-setbg="img/insights.svg">
-						<div class="portfolio-text">
-							<h2>Insights</h2>
-							<p>Practitioner portal</p>
-						</div>
-					</a>
-				</div>
-				<!-- portfolio item -->
-				<div class="col-lg-4 col-md-6 fs">
-					<a href="https://www.brockmeyer.nl/en/" target="_blank" class="portfolio-item set-bg" data-setbg="img/brockmeyer.svg">
-						<div class="portfolio-text">
-							<h2>Brockmeyer Jobmarketing Experts</h2>
-							<p>Job marketing industry</p>
-						</div>
-					</a>
-				</div>
-				<!-- portfolio item -->
-				<div class="col-lg-4 col-md-6 photo">
-					<a href="https://bestetherapeut.nl/" target="_blank" class="portfolio-item set-bg bg-size-hin" data-setbg="img/hin3.jpg">
-						<div class="portfolio-text">
-							<h2>HIN - De Beste Therapeut</h2>
-							<p>Hypnotherapy Portal</p>
-						</div>
-					</a>
-				</div>
-				<!-- portfolio item -->
-				<div class="col-lg-4 col-md-12 brand">
-					<a href="https://avtobys.kz/" target="_blank" class="portfolio-item set-bg bg-size-avtobys" data-setbg="img/avtobys.svg">
-						<div class="portfolio-text">
-							<h2>Avtobys(Smart Qala)</h2>
-							<p>Management system for busdepot</p>
-						</div>
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Portfolio section start end -->
-
-
-	<!-- Testimonial section start -->
-	<section class="testimonial-section spad">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2 owl-carousel test-slider" id="test_slider">
-					<!-- testimonial item -->
-					<div class="single-testimonial">
-						<div class="qut">“</div>
-						<p>Fear is the disease. Hustle is the antidote… What are you scared of? Go hustle and get it done.</p>
-						<h2>Travis Kalanick</h2>
-						<span>Uber founder</span>
-					</div>
-					<!-- testimonial item -->
-					<div class="single-testimonial">
-						<div class="qut">“</div>
-						<p>Growth and comfort do not coexist.</p>
-						<h2>Ginni Rometty</h2>
-						<span>CEO of IBM</span>
-					</div>
-					<!-- testimonial item -->
-					<div class="single-testimonial">
-						<div class="qut">“</div>
-						<p>I always did something I was a little not ready to do. I think that’s how you grow. When there’s that moment of ‘Wow, I’m not really sure I can do this,’ and you push through those moments, that’s when you have a breakthrough.</p>
-						<h2>Marissa Mayer</h2>
-						<span>CEO of Yahoo</span>
-						</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Testimonial section start end -->
-
-
-	<!-- Contact section start -->
-	<section class="contact-section spad" id="contact">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2">
-					<div class="con-info wow fadeInUp" data-wow-delay="0.2s">
-						<p class="subtitle">Almaty</p>
-						<h2>53a Gabdullin Street,<br>Kazakhstan <br><br>+7 708 007 0079<br>zhygmytov@gmail.com</h2>
-					</div>
-					<!-- contact form -->
-					<div id="map"></div>
-					<script>
-						// Initialize and add the map
-						function initMap() {
-							// The location of Uluru
-							var uluru = {lat: 43.228850, lng: 76.913730};
-							// The map, centered at Uluru
-							var map = new google.maps.Map(
-									document.getElementById('map'), {
-										zoom: 12, 
-										center: uluru,
-										panControl: false,
-										});
-							// The marker, positioned at Uluru
-							var marker = new google.maps.Marker({position: uluru, map: map});
-						}
-								</script>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Contact section start end -->
-
-
-	<!-- Footer section start -->
-	<footer class="footer-section spad">
-		<div class="container">
-			<div class="social">
-								<a href="https://twitter.com/jyggiz_" target="_blank">twitter </a>
-								<a href="https://github.com/jyggiz" target="_blank">github </a>
-								<a href="https://www.linkedin.com/in/timur-zhigmytov/" target="_blank">linkedin </a>
-            </div>
-			<div class="copyright">Copyright © 2020, All rights Reserved. <br> Created by Timur Zhigmytov</div>
-		</div>
-	</footer>
-	<!-- Footer section start end -->
-
-
-	<!--====== Jquery & Javascripts files  ======-->
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/jquery.nav.min.js"></script>
-	<script src="js/isotope.pkgd.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/magnific-popup.min.js"></script>
-	<script src="js/particles.min.js"></script>
-	<script src="js/init-particles.js"></script>
-	<script src="js/wow.min.js"></script>
-	<script async defer
-	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMv9j-3vY5FQZvhAaAwvl58wwbUzNuEM4&callback=initMap&language=en">
-	</script>
-	<script src="js/scripts.js"></script>
-
+  <img class="background" src="f16311fd0c32786525f471c685bc516e.gif" alt="">
+  <div class="nes-container is-rounded container">
+    <p class="container-title">Timur Zhigmytov</p>
+    <p class="container-text">Frontend Developer</p>
+    <p class="container-text">Media Monk</p>
+    <div class="container-icons">
+      <a href="https://github.com/jyggiz" target="_blank"><i class="nes-icon icon github"></i></a> 
+      <a href="https://www.linkedin.com/in/timur-zhigmytov/" target="_blank"><i class="nes-icon icon linkedin"></i></a>
+      <a href="https://medium.com/@zhygmytov" target="_blank"><i class="nes-icon icon medium"></i></a>
+    </div>
+  </div>
 </body>
 </html>
