add mobile layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="nes-container is-rounded container">
     <p class="container-title">Timur Zhigmytov</p>
     <p class="container-text">Frontend Developer</p>
-    <p class="container-text">Media Monk</p>
+    <p class="container-text company">@MediaMonks</p>
     <div class="container-icons">
       <a href="https://github.com/jyggiz" target="_blank"><i class="nes-icon icon github"></i></a> 
       <a href="https://www.linkedin.com/in/timur-zhigmytov/" target="_blank"><i class="nes-icon icon linkedin"></i></a>
